--- a/applyForm.html
+++ b/applyForm.html
@@ -54,10 +54,10 @@
     </nav>
     <!-- 헤더 경계선 -->
 
-    <div class="container py-3 px-3">
+    <div class="container my-3 py-3 px-3">
         <div class="justify-content-center d-flex py-3">
             <h2>
-                이력서 작성 하기
+                이력서
             </h2>
         </div>
         <div class="my-border-color-default px-3 py-3" style="width: 100%; ">
@@ -77,7 +77,7 @@
         </div>
         <div class="d-flex justify-content-center">
             <div class="btn-group m-4" role="group" aria-label="Basic example ">
-                <button type="button" class="btn btn-primary" id="btnSave">완료</button>
+                <button type="button" class="btn btn-primary my-button-color-default" id="btnSave">완료</button>
             </div>
             <div class="btn-group m-4" role="group" aria-label="Basic example ">
                 <button id="btnCancel" type="button" class="btn btn-secondary">취소</button>
