--- a/userUpdateForm.html
+++ b/userUpdateForm.html
@@ -87,6 +87,56 @@
                         <label class="form-label">경력 연차</label>
                         <input type="number" class="form-control" placeholder="Career Year">
                     </div>
+                    <label class="form-label">관심분야</label>
+                    <div class="mb-5" style="display: grid;
+                                        grid-template-columns: 1fr 8fr 2fr;">
+                        <div></div>
+                        <div>
+                            <div class="mb-2"></div>
+                            <div class="mb-3">
+                            </div>
+                            <div class="mb-2">
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxJava" value="option1">
+                                    <label class="form-check-label" for="inlineCheckbox1">Java</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxSpring" value="option2">
+                                    <label class="form-check-label" for="inlineCheckbox2">Spring</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxOracle" value="option1">
+                                    <label class="form-check-label" for="inlineCheckbox1">Oracle</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxMySQL" value="option2">
+                                    <label class="form-check-label" for="inlineCheckbox2">MySQL</label>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxReact" value="option1">
+                                    <label class="form-check-label" for="inlineCheckbox1">React</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxPython" value="option2">
+                                    <label class="form-check-label" for="inlineCheckbox2">Python</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxC" value="option1">
+                                    <label class="form-check-label" for="inlineCheckbox1">C#</label>
+                                </div>
+                                <div class="form-check form-check-inline" style="width: 19%">
+                                    <input class="form-check-input" type="checkbox" id="CheckboxSwift" value="option2">
+                                    <label class="form-check-label" for="inlineCheckbox2">Swift</label>
+                                </div>
+                            </div>
+                            <div>
+
+                            </div>
+                        </div>
+                        <div></div>
+                    </div>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-primary my-button-color-default">정보 수정</button>
                         <a href="/applyForm.html">
